Archive2/0c/0fa949604419cd/output
main.cpp: In function 'void prova(int&)':
main.cpp:5:1: error: expected ';' before '}' token
 };
 ^
main.cpp: At global scope:
main.cpp:5:2: warning: extra ';' [-Wpedantic]
 };
  ^
